# emboviz

./: .gitignore  ARCHITECTURE.md  AUDIT.md  INTEGRATION_REPORT.md  INTEGRATION_SHOWCASE.md  LICENSE  LITERATURE.md  README.md  USER_JOURNAL.md  pyproject.toml
adapters/emboviz-act/: README.md  pyproject.toml
adapters/emboviz-act/emboviz_act/: __init__.py  model.py  server.py  spec.py
adapters/emboviz-cosmos3/: README.md  pyproject.toml
adapters/emboviz-cosmos3/emboviz_cosmos3/: __init__.py  bridge.py  concat_view.py  domains.py  dream_step.py  model.py  perturb.py  reason.py  server.py  spec.py
adapters/emboviz-cosmos3/emboviz_cosmos3/_cosmos_action/: NOTICE  __init__.py  action_normalization.py  pose_utils.py
adapters/emboviz-cosmos3/scripts/: POD_RUNSHEET.md  STRESS_RUNSHEET.md  smoke_rollout.py
adapters/emboviz-cosmos3/tests/: test_action_encoding.py  test_bridge.py  test_dream.py  test_joint_bridge.py  test_perturb.py  test_reason.py  test_rollout_against_mock.py
adapters/emboviz-ctrlworld/: README.md  pyproject.toml
adapters/emboviz-ctrlworld/emboviz_ctrlworld/: __init__.py  dream_step.py  model.py  profiles.py  server.py  spec.py  stack_view.py
adapters/emboviz-ctrlworld/emboviz_ctrlworld/_ctrl_world/: README.md  ctrl_world.py  pipeline_ctrl_world.py
adapters/emboviz-ctrlworld/tests/: test_dream_step.py  test_model_helpers.py  test_profiles.py  test_stack_view.py
adapters/emboviz-gr00t/: README.md  pyproject.toml
adapters/emboviz-gr00t/emboviz_gr00t/: __init__.py  model.py  server.py  spec.py
adapters/emboviz-lama/: README.md  pyproject.toml
adapters/emboviz-lama/emboviz_lama/: __init__.py  client.py  handler.py  model.py  server.py  spec.py
adapters/emboviz-lerobot/: README.md  pyproject.toml
adapters/emboviz-lerobot/emboviz_lerobot/: __init__.py  server.py  source.py  spec.py
adapters/emboviz-lerobot/tests/: test_gripper_key.py
adapters/emboviz-oft/: README.md  pyproject.toml
adapters/emboviz-oft/emboviz_oft/: __init__.py  model.py  server.py  spec.py
adapters/emboviz-openvla/: README.md  pyproject.toml
adapters/emboviz-openvla/emboviz_openvla/: __init__.py  actor.py  model.py  server.py  spec.py
adapters/emboviz-pi0/: README.md  pyproject.toml
adapters/emboviz-pi0/emboviz_pi0/: __init__.py  convert.py  model.py  server.py  spec.py
adapters/emboviz-reader-gr00t/: README.md  pyproject.toml
adapters/emboviz-reader-gr00t/emboviz_reader_gr00t/: __init__.py  server.py  source.py  spec.py
adapters/emboviz-robot/: README.md  pyproject.toml
adapters/emboviz-robot/emboviz_robot/: __init__.py  kinematics.py  robots.py
adapters/emboviz-robot/tests/: test_kinematics.py
adapters/emboviz-sam3/: README.md  pyproject.toml
adapters/emboviz-sam3/emboviz_sam3/: __init__.py  client.py  handler.py  model.py  server.py  spec.py
adapters/emboviz-sd-inpaint/: README.md  pyproject.toml
adapters/emboviz-sd-inpaint/emboviz_sd_inpaint/: __init__.py  client.py  handler.py  model.py  server.py  spec.py
adapters/emboviz-sd-inpaint/tests/: test_model.py
adapters/emboviz-smolvla/: README.md  pyproject.toml
adapters/emboviz-smolvla/emboviz_smolvla/: __init__.py  _checkpoint.py  model.py  server.py  spec.py
adapters/emboviz-wire/: README.md  pyproject.toml
adapters/emboviz-wire/emboviz_wire/: __init__.py  client.py  dataset_build.py  distances.py  handler.py  model_protocol.py  policy_bridge.py  profile.py  reader_protocol.py  server.py  types.py  wire.py  world_model_protocol.py
adapters/emboviz-wire/emboviz_wire/observations/: __init__.py  depth.py  gripper.py  image.py  state.py  tactile.py
adapters/emboviz-wire/tests/: test_policy_bridge.py  test_world_model_history_wire.py
configs/: README.md  act-aloha-attention.yaml  act-aloha-smoke.yaml  act-lerobot.yaml  act-so101-pickplace.yaml  act.yaml  cosmos_droid_pi0_demo.yaml  ctrlworld_droid_pi0_cable.yaml  ctrlworld_droid_pi0_demo.yaml  ctrlworld_droid_pi0_kettle.yaml  ctrlworld_droid_pi0_towel.yaml  droid.yaml  droid_pi0.yaml  gr00t-droid-sample.yaml  gr00t-g1-broccoli.yaml  gr00t-libero-attn.yaml  gr00t-libero.yaml  gr00t.yaml  oft-libero-spatial-attn.yaml  oft-libero-spatial.yaml  oft.yaml  openvla-bridge.yaml  openvla.yaml  pi0-libero-attn.yaml  pi0-libero.yaml  pi0.yaml  smolvla-lerobot.yaml  smolvla-libero-attention.yaml  smolvla-libero-smoke.yaml  smolvla.yaml
emboviz/: __init__.py  calibration.py  config.py  modality_pools.py
emboviz/_internal/: __init__.py  multi_episode.py  report.py  runner.py
emboviz/adapters/: __init__.py  actor_base.py  client.py  lifecycle.py  protocol.py  reader_registry.py  registry.py  server_base.py  wire.py  world_model_registry.py
emboviz/cli/: __init__.py  _install_common.py  _loaders.py  analyze.py  compare_models.py  convert_pi0.py  info.py  init.py  install_adapter.py  install_gr00t.py  install_pi0.py  run_battery.py  run_suite.py  run_trajectory.py  stop.py  train_failure_probe.py
emboviz/core/: __init__.py  distances.py  divergences.py  profile.py  results.py  types.py
emboviz/coverage/: __init__.py  (+2 more)
legacy/: action_viz.py  attention_grounding.py  attribute_vla.py  counterfactual.py  demo_viz.py  faithfulness.py  load.py  replay.py  visualize_concepts.py
policylens/: __init__.py
sam3_service/: pyproject.toml
sam3_service/emboviz_sam3/: __init__.py  __main__.py  schema.py  server.py
scripts/: debug_gr00t_grid.py  debug_gr00t_mapping.py  debug_gr00t_per_layer_head.py  debug_gr00t_sink_filtered.py  debug_pi0_per_layer.py  debug_pi0_query_pos.py  download_models.sh  final_integration_test.sh  itest_gr00t.py  itest_openvla.py  itest_pi0.py  itest_runner.py  itest_smolvla.py  probe_attention.py  probe_attn.py  probe_convention.py  probe_memorization.py  probe_pi0_libero.py  render_attention.py  run_failure_demo.py  run_first_test.py  run_module_b.py  run_module_b_sweep.py  run_module_full.py  run_stage_b.py  run_stage_b_v2.py  setup_runpod.sh  setup_vastai.sh
tools/: diag_cosmos_call.py  diag_pi0_actions.py  diag_pi0_vs_expert.py  diag_recorded_loop.py  dream_smoke.py  highres_probe.py  smoke_scene_swap.py
(+310 files in other folders)
