[project]
name = "emboviz"
version = "0.3.0"
description = "Emboviz — the X-ray for deployed VLA policies. Plain-English diagnostics on failing real-robot episodes."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10,<3.13"

# ──────────────────────────────────────────────────────────────────────
# Core install. Tiny, modern, clean — NO model dependencies live here.
# Each VLA adapter is a separate package (emboviz-openvla, emboviz-oft,
# emboviz-pi0, emboviz-gr00t, emboviz-sam3). The user installs core
# plus whichever adapters they actually want. Heavy/conflicting deps
# (torch, transformers per model, lerobot 0.3.x, etc.) live in the
# adapter's isolated runtime venv — never in the user's main venv.
#
# Core ↔ adapter IPC is ZeroMQ over Unix domain sockets, with msgpack
# (and msgpack-numpy for tensors) as the wire format. ZMQ is what vLLM
# uses for EngineCore IPC and what Jupyter has used since 2014; both
# are direct category matches for "two ML processes talking with
# tensor-shaped payloads, multi-Python-version safe". Adapter Python
# versions are independent of core's — the wire is bytes, not pickle.
# ──────────────────────────────────────────────────────────────────────
dependencies = [
    # The minimal ZMQ connector + shared wire contracts (Scene,
    # ActionResult, VLAModel, the msgpack codec, the serve loop). This
    # is the ONE package shared with model worker venvs; emboviz core
    # re-exports its types via thin shims under emboviz.core.* /
    # emboviz.adapters.* so existing imports keep working. Everything
    # below is HOST-only (datasets / diagnostics / viz / export) and
    # never reaches a worker venv.
    "emboviz-wire>=0.3",
    # plumbing — pure-Python or fast-imported data wrangling
    "numpy>=1.26",
    "scipy>=1.11",
    "Pillow>=10.0",
    "tqdm>=4.66",
    "click>=8.1",
    "pydantic>=2.7",
    "PyYAML>=6.0",          # run-config files (emboviz analyze --config)
    "huggingface_hub>=0.24",
    # report rendering
    "matplotlib>=3.8",      # heatmap colormaps in the rerun export + report figures
    "jinja2>=3.1",          # report.html templating
    # tabular / scientific dataset readers (HDF5 in-process; LeRobot/RLDS
    # readers live in their own venvs)
    "h5py>=3.10",
    # interactive Rerun export (exporters/rerun.py). The exporter targets
    # the rerun-sdk >=0.23 API — RecordingStream(application_id=,
    # recording_id=), the unified set_time(sequence=|duration=), and the
    # Scalars archetype. core no longer installs ``lerobot`` (its v2.x
    # reader lives in the isolated ``emboviz-lerobot`` worker venv, which
    # keeps lerobot's ``rerun-sdk<0.27`` pin OUT of core), so the exporter
    # is free of that cap. We pin the MINOR (>=0.33,<0.34) on purpose: the
    # .rrd on-disk format is tied to rerun's minor version, and the host
    # installs via ``uv pip install -e`` (which ignores uv.lock and takes
    # the latest match). A floating ``>=0.x`` therefore lets the WRITER
    # (whatever the pod resolved) drift ahead of the local VIEWER and emit
    # an .rrd the viewer can't parse ("data stream newer than local …").
    # Pinning the minor keeps writer and reader on one format; bump it
    # deliberately (and upgrade the viewer in lockstep), never by drift.
    "rerun-sdk>=0.33,<0.34",
    # COCO RLE mask decoder (used by both the SAM 3 client and the
    # CocoAnnotationConnector for user-supplied per-frame annotations).
    "pycocotools>=2.0",
    # ── IPC for per-adapter isolated worker processes ─────────────
    # ZeroMQ (pyzmq) is the messaging library; we use DEALER (client) +
    # ROUTER (server) over ``ipc://`` Unix domain sockets for local IPC,
    # falling back to ``tcp://`` automatically on Windows. msgpack is
    # the wire serializer; msgpack-numpy patches it to handle numpy
    # arrays natively (zero encoding/decoding cost beyond a memcpy).
    # Both deps are tiny (~3 MB combined), import-fast, and ABI-stable.
    "pyzmq>=26",
    "msgpack>=1.0",
    "msgpack-numpy>=0.4.8",
]

[project.optional-dependencies]

# ────────── LeRobot dataset reader ──────────
# NOTE: there is intentionally NO ``[lerobot]`` extra. Reading LeRobot
# datasets is done by the SEPARATE ``emboviz-lerobot`` package, whose
# isolated reader venv holds ``lerobot`` (and its ``rerun-sdk<0.27`` pin +
# torch). Installing it into core would drag that rerun cap into the host
# and collide with core's own ``rerun>=0.32`` .rrd exporter. Instead:
#
#     uv pip install emboviz emboviz-lerobot   # core + the thin reader shim
#     emboviz install-lerobot                  # builds the isolated reader venv
#
# Core stays torch-free and lerobot-free; the reader runs as a ZMQ worker.

# ────────── Optional heavy dataset family ──────────
# Only pulled in by users who actually have RLDS / Open-X-Embodiment
# data. Adds tensorflow_datasets + tensorflow-cpu (~500 MB) so we keep
# it out of the core deps.
rlds = [
    "tensorflow-datasets>=4.9",
    "tensorflow-cpu>=2.15",
    "rlds>=0.1.8",
]

# ────────── Dev / test ──────────
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
]

# NOTE: there are no longer per-adapter extras. Adapters are separate
# distributions (emboviz-openvla, emboviz-oft, etc.) the user installs
# alongside emboviz. This eliminates every cross-adapter dep conflict
# we ever hit, because each adapter's heavy deps live in its own
# isolated runtime venv, never in the user's main env.

[project.scripts]
emboviz = "emboviz.cli:main"

[project.entry-points."emboviz.adapters"]
# Adapter packages register themselves here so emboviz can auto-discover
# what's installed. Each entry maps a CLI name (e.g. "openvla") to the
# fully-qualified ``module:attr`` path of the adapter's AdapterSpec
# instance. The spec declares: runtime venv Python version, runtime
# pip deps, env vars, server entry-point command, default kwargs.
#
# This dict is INTENTIONALLY EMPTY in core — each adapter package adds
# its own entry via its own pyproject [project.entry-points...] block.

# ──────────────────────────────────────────────────────────────────────
# Local development sources (dev-only — NOT part of the published wheel).
#
# ``emboviz-wire`` is the one runtime dependency of core that lives in
# THIS repo rather than on PyPI. uv strips ``[tool.uv.sources]`` from the
# built distribution's metadata, so PyPI users still resolve
# ``emboviz-wire>=0.3`` from the registry; only local ``uv run`` / ``uv
# sync`` redirect it to the in-repo checkout. The dev-pod / user install
# scripts use ``uv pip install -e`` (which does not read sources) and pass
# the wire checkout explicitly, so all three paths install the SAME wire.
# ──────────────────────────────────────────────────────────────────────
[tool.uv.sources]
emboviz-wire = { path = "adapters/emboviz-wire", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
