[project]
name = "emboviz"
version = "0.3.0"
description = "Emboviz — the X-ray for deployed VLA policies. Plain-English diagnostics on failing real-robot episodes."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10,<3.13"

# ──────────────────────────────────────────────────────────────────────
# Core install. Tiny, modern, clean — NO model dependencies live here.
# Each VLA adapter is a separate package (emboviz-openvla, emboviz-oft,
# emboviz-pi0, emboviz-gr00t, emboviz-sam3). The user installs core
# plus whichever adapters they actually want. Heavy/conflicting deps
# (torch, transformers per model, lerobot 0.3.x, etc.) live in the
# adapter's isolated runtime venv — never in the user's main venv.
#
# Core ↔ adapter IPC is ZeroMQ over Unix domain sockets, with msgpack
# (and msgpack-numpy for tensors) as the wire format. ZMQ is what vLLM
# uses for EngineCore IPC and what Jupyter has used since 2014; both
# are direct category matches for "two ML processes talking with
# tensor-shaped payloads, multi-Python-version safe". Adapter Python
# versions are independent of core's — the wire is bytes, not pickle.
# ──────────────────────────────────────────────────────────────────────
dependencies = [
    # The minimal ZMQ connector + shared wire contracts (Scene,
    # ActionResult, VLAModel, the msgpack codec, the serve loop). This
    # is the ONE package shared with model worker venvs; emboviz core
    # re-exports its types via thin shims under emboviz.core.* /
    # emboviz.adapters.* so existing imports keep working. Everything
    # below is HOST-only (datasets / diagnostics / viz / export) and
    # never reaches a worker venv.
    "emboviz-wire>=0.3",
    # Mandatory companion shims. Each is lightweight (emboviz-wire + numpy
    # only); the heavy runtime for each is built into an isolated worker venv
    # on first use, never in the host — so bundling them here introduces no
    # dependency conflict. Shipping them with core makes the memorization
    # detector + on-manifold fill and BOTH dataset-format readers always
    # present, so a first install is a single command.
    "emboviz-sam3>=0.3",          # SAM 3 target detector (memorization mask)
    "emboviz-lama>=0.3",          # LaMa on-manifold inpainting fill (object removal)
    "emboviz-sd-inpaint>=0.1",    # SD text-guided inpainting (object insertion, dream scene swap)
    "emboviz-lerobot>=0.3",       # LeRobot v3.0 dataset reader
    "emboviz-reader-gr00t>=0.3",  # GR00T-format reader (LeRobot v2.1 + modality.json)
    # plumbing — pure-Python or fast-imported data wrangling
    "numpy>=1.26",
    "scipy>=1.11",
    "Pillow>=10.0",
    # World-model viz (emboviz/world_models/viz.py) encodes/decodes MP4 in the
    # host process — the dream/stress CLIs save dream videos here, not in a
    # worker. PyAV carries the bundled ffmpeg libraries imageio's writer uses.
    "imageio>=2.34",
    "av>=12",
    "tqdm>=4.66",
    "click>=8.1",
    "pydantic>=2.7",
    "PyYAML>=6.0",          # run-config files (emboviz analyze --config)
    "huggingface_hub>=0.24",
    # report rendering
    "matplotlib>=3.8",      # heatmap colormaps in the rerun export + report figures
    "jinja2>=3.1",          # report.html templating
    # tabular / scientific dataset readers (HDF5 in-process; LeRobot/RLDS
    # readers live in their own venvs)
    "h5py>=3.10",
    # interactive Rerun export (exporters/rerun.py). The exporter targets
    # the rerun-sdk >=0.23 API — RecordingStream(application_id=,
    # recording_id=), the unified set_time(sequence=|duration=), and the
    # Scalars archetype. core no longer installs ``lerobot`` (its v2.x
    # reader lives in the isolated ``emboviz-lerobot`` worker venv, which
    # keeps lerobot's ``rerun-sdk<0.27`` pin OUT of core), so the exporter
    # is free of that cap. We pin the MINOR (>=0.33,<0.34) on purpose: the
    # .rrd on-disk format is tied to rerun's minor version, and the host
    # installs via ``uv pip install -e`` (which ignores uv.lock and takes
    # the latest match). A floating ``>=0.x`` therefore lets the WRITER
    # (whatever the pod resolved) drift ahead of the local VIEWER and emit
    # an .rrd the viewer can't parse ("data stream newer than local …").
    # Pinning the minor keeps writer and reader on one format; bump it
    # deliberately (and upgrade the viewer in lockstep), never by drift.
    "rerun-sdk>=0.33,<0.34",
    # COCO RLE mask decoder (used by both the SAM 3 client and the
    # CocoAnnotationConnector for user-supplied per-frame annotations).
    "pycocotools>=2.0",
    # ── IPC for per-adapter isolated worker processes ─────────────
    # ZeroMQ (pyzmq) is the messaging library; we use DEALER (client) +
    # ROUTER (server) over ``ipc://`` Unix domain sockets for local IPC,
    # falling back to ``tcp://`` automatically on Windows. msgpack is
    # the wire serializer; msgpack-numpy patches it to handle numpy
    # arrays natively (zero encoding/decoding cost beyond a memcpy).
    # Both deps are tiny (~3 MB combined), import-fast, and ABI-stable.
    "pyzmq>=26",
    "msgpack>=1.0",
    "msgpack-numpy>=0.4.8",
]

[project.optional-dependencies]

# ────────── Model adapters ──────────
# One extra per VLA family. Each pulls in only that adapter's lightweight host
# shim (entry-point registration; the heavy model runtime is built into an
# isolated worker venv on first use). So ``uv sync --extra gr00t`` installs core
# + the mandatory companion shims (SAM 3 / LaMa / both dataset readers, declared
# in ``dependencies`` above) + the GR00T adapter — in a single command. Bundling
# the shims this way is conflict-free precisely because no heavy dependency ever
# enters the host environment; cross-adapter conflicts are isolated per worker.
openvla = ["emboviz-openvla>=0.3"]
oft     = ["emboviz-oft>=0.3"]
pi0     = ["emboviz-pi0>=0.3"]
gr00t   = ["emboviz-gr00t>=0.3"]
act     = ["emboviz-act>=0.3"]
smolvla = ["emboviz-smolvla>=0.3"]

# ────────── World models ──────────
# Generative world models (Scene + actions -> future frames), used as the
# substrate for trust-calibration and rollout diagnostics. Same isolated-worker
# pattern as the VLA adapters, but the heavy model runs in a separate vLLM-Omni
# server — the worker shim here is a GPU-free HTTP client.
cosmos3 = ["emboviz-cosmos3>=0.1"]

# ────────── Robot kinematics ──────────
# Robot-agnostic forward kinematics (joints -> end-effector pose), Pinocchio-
# backed. Runs in-process in the driver (no isolated worker, no torch conflict).
# Needed to fly a joint-space policy (π0-DROID) inside a Cartesian-conditioned
# world model: install alongside cosmos3 for the closed-loop DROID stress test.
robot = ["emboviz-robot>=0.1"]

all = [
    "emboviz-openvla>=0.3",
    "emboviz-oft>=0.3",
    "emboviz-pi0>=0.3",
    "emboviz-gr00t>=0.3",
    "emboviz-act>=0.3",
    "emboviz-smolvla>=0.3",
    "emboviz-cosmos3>=0.1",
    "emboviz-robot>=0.1",
]

# ────────── Optional heavy dataset family ──────────
# RLDS / Open-X-Embodiment readers run IN-PROCESS (not an isolated worker venv)
# and pull tensorflow (~500 MB), so they stay opt-in rather than a core dep.
rlds = [
    "tensorflow-datasets>=4.9",
    "tensorflow-cpu>=2.15",
    "rlds>=0.1.8",
]

# ────────── Dev / test ──────────
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
emboviz = "emboviz.cli:main"

[project.entry-points."emboviz.adapters"]
# Adapter packages register themselves here so emboviz can auto-discover
# what's installed. Each entry maps a CLI name (e.g. "openvla") to the
# fully-qualified ``module:attr`` path of the adapter's AdapterSpec
# instance. The spec declares: runtime venv Python version, runtime
# pip deps, env vars, server entry-point command, default kwargs.
#
# This dict is INTENTIONALLY EMPTY in core — each adapter package adds
# its own entry via its own pyproject [project.entry-points...] block.

# ──────────────────────────────────────────────────────────────────────
# Local sources for the in-repo companion packages (core's dependencies and
# the model-adapter extras above). uv strips ``[tool.uv.sources]`` from the
# built wheel's metadata, so a future PyPI install resolves them from the
# registry — only the local ``uv sync`` / ``uv run`` workflow redirects them to
# these in-repo checkouts. This is what lets ``uv sync --extra <model>`` install
# everything from the clone in one command. (``uv pip install`` does NOT read
# this table, which is why the documented install path is ``uv sync``.) Each is
# editable so a worker venv built on first use picks up the local source —
# dev path == user path.
# ──────────────────────────────────────────────────────────────────────
[tool.uv.sources]
emboviz-wire         = { path = "adapters/emboviz-wire",         editable = true }
emboviz-sam3         = { path = "adapters/emboviz-sam3",         editable = true }
emboviz-lama         = { path = "adapters/emboviz-lama",         editable = true }
emboviz-sd-inpaint   = { path = "adapters/emboviz-sd-inpaint",   editable = true }
emboviz-lerobot      = { path = "adapters/emboviz-lerobot",      editable = true }
emboviz-reader-gr00t = { path = "adapters/emboviz-reader-gr00t", editable = true }
emboviz-openvla      = { path = "adapters/emboviz-openvla",      editable = true }
emboviz-oft          = { path = "adapters/emboviz-oft",          editable = true }
emboviz-pi0          = { path = "adapters/emboviz-pi0",          editable = true }
emboviz-gr00t        = { path = "adapters/emboviz-gr00t",        editable = true }
emboviz-act          = { path = "adapters/emboviz-act",          editable = true }
emboviz-smolvla      = { path = "adapters/emboviz-smolvla",      editable = true }
emboviz-cosmos3      = { path = "adapters/emboviz-cosmos3",      editable = true }
emboviz-robot        = { path = "adapters/emboviz-robot",        editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
