[project]
name = "emboviz-sam3"
version = "0.1.0"
description = "SAM 3 sidecar service for emboviz — runs in its own Python 3.12 venv and serves text→mask detections over HTTP"
readme = "README.md"
requires-python = ">=3.12"
# Hard pins for the SAM 3 runtime. These versions are the minimum that
# ship the HuggingFace Sam3Model/Sam3Processor classes (transformers
# 4.56 added them; we go a bit higher for stability). torch >= 2.7 is
# the SAM 3 reference repo's stated requirement.
dependencies = [
    "torch>=2.7,<2.10",
    "transformers>=4.56",
    "accelerate>=1.0",
    "safetensors>=0.5",
    "huggingface-hub>=0.28",
    "tokenizers>=0.21",
    "pillow>=10",
    "numpy>=1.26",
    "pycocotools>=2.0",
    # The HTTP server
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "python-multipart>=0.0.9",
]

[project.scripts]
emboviz-sam3 = "emboviz_sam3.__main__:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["emboviz_sam3"]
