[project]
name = "emboviz-act"
version = "0.3.0"
description = "ACT (Action Chunking Transformer) adapter for emboviz — runs lerobot's ACTPolicy in its own isolated venv as a ZeroMQ worker."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10,<3.13"

# Thin shim for the user's main venv: advertises the AdapterSpec via the
# entry point and ships nothing heavy. The lerobot runtime installs into
# the isolated venv via ``emboviz install-act``.
dependencies = [
    "emboviz-wire>=0.3",
    "numpy>=1.26",
]

[project.entry-points."emboviz.adapters"]
act = "emboviz_act.spec:SPEC"

[project.scripts]
emboviz-act = "emboviz_act.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
