[project]
name = "emboviz-lama"
version = "0.3.0"
description = "LaMa (big-lama) inpainting fill for emboviz — runs in its own isolated venv as a ZeroMQ worker. The on-manifold third mask-fill of the memorization diagnostic."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10,<3.13"

# THIN SHIM that goes in the user's MAIN venv. Carries zero heavy deps —
# its only job is to advertise an AdapterSpec via entry points (so
# ``emboviz install-lama`` knows what to install) and ship a small
# LamaClient that core's perturbers can import without pulling torch into
# the main venv.
#
# The heavy stuff (torch + the TorchScript big-lama runtime) lives in
# ``AdapterSpec.runtime_pip`` and installs into ``~/.emboviz/venvs/lama/``
# via ``emboviz install-lama``.
dependencies = [
    "emboviz-wire>=0.3",
    "numpy>=1.26",
]

[project.entry-points."emboviz.adapters"]
lama = "emboviz_lama.spec:SPEC"

[project.scripts]
emboviz-lama = "emboviz_lama.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
